# optimal-experiments-for-partial-ID

./: .gitignore  3Hedges.ipynb  asia_evaluation_results.csv  autobound-clean.ipynb  evaluation.ipynb  figure-4.ipynb  figure4.pip  graphs.json  simple_xy.pip  testing.ipynb
algorithm_evaluation/: __init__.py  bif_parser.py  causal_graph.py  evaluate.py  experiment_setup.md  get_useless.py  id_algorithm.py  visualize.py
algorithm_evaluation/results/: 03_04__slide_across_CF_fraction.csv  14_03__11_45.csv  14_03__11_45.txt  14_03__12_18__moreCF.txt  14_03__16_33__moreCF.csv  16_03__slide_across_CF_fraction.csv  16_03__slide_across_CF_fraction.txt  17_03__slide_across_CF_fraction.csv
algorithm_evaluation/results/first_test_runs/: 14_03__12_18__moreCF.csv
data/: figure-4-obs.csv
lib/autobound_pkg/: LICENSE  PKG-INFO  README.md  setup.cfg  setup.py
lib/autobound_pkg/autobound/: ID.py  SCM.py
lib/autobound_pkg/autobound_gjduarte.egg-info/: PKG-INFO  top_level.txt
lib/autobound_pkg/tests/: test_parser.py  test_program.py
plots/: figure-1.ipynb
potency_computation/: figure-15.ipynb  figure-4.ipynb  figure4.pip
potency_computation/autobound_pkg/: pyproject.toml
potency_computation/autobound_pkg/autobound/: Parser.py  Program.py  Query.py  Simulation.py  canonicalModel.py  funcs.py  utils.py
potency_computation/autobound_pkg/autobound_gjduarte.egg-info/: SOURCES.txt
potency_computation/autobound_pkg/tests/: test_scm.py  test_scm.py:Zone.Identifier
potency_computation/data/: doM.csv  doZ.csv  figure-15-obs.csv  figure-4-obs.csv  obs.csv
(+14 files in other folders)
