[metadata]
name = autobounds
version = 0.0.2
author = Guilherme Duarte,Noam Filkenstein, Dean Knox, Jonathan Mummolo, Ilya Shpitser
author_email = gjardimduarte@gmail.com
description = AUTOBOUNDS -- software for calculating causal inference bounds
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/duarteguilherme/autobound
project_urls = 
	Bug Tracker = https://github.com/duarteguilherme/autobound/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[egg_info]
tag_build = 
tag_date = 0

